[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/choice_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://logic/game_screen/story_display.gd" type="Script" id=3]

[node name="StoryContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -248.0
margin_right = 173.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_right = 346.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Title"
align = 1

[node name="NarrativeText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 346.0
margin_bottom = 304.0
size_flags_vertical = 3
custom_constants/line_separation = 10
bbcode_enabled = true
bbcode_text = "Insert text here"
text = "Insert text here"
fit_content_height = true
scroll_active = false

[node name="ChoicesMargin" type="MarginContainer" parent="."]
margin_top = 308.0
margin_right = 346.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 150 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicesMargin"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 326.0
margin_bottom = 178.0
custom_constants/separation = 10
alignment = 1

[node name="Choice1" parent="ChoicesMargin/ChoicesContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 306.0
margin_bottom = 32.0

[node name="Choice2" parent="ChoicesMargin/ChoicesContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 42.0
margin_right = 306.0
margin_bottom = 74.0
choice_index = 2

[node name="Choice3" parent="ChoicesMargin/ChoicesContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 84.0
margin_right = 306.0
margin_bottom = 116.0
choice_index = 3

[node name="Choice4" parent="ChoicesMargin/ChoicesContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 126.0
margin_right = 306.0
margin_bottom = 158.0
choice_index = 4
